# cerinta-6

./: CMakeLists.txt  run_both.bat
src/: process1.cpp  process2.cpp  shared_memory.h
